# metatron

./: ._CMakeLists.txt  CMakeLists.txt  README.md  laser_range_filter.rviz  laser_range_filter_config.yaml  package.xml
gigatron/: CMakeLists.txt  LICENSE.md  package.xml
gigatron/config/: .bash_gigatron
gigatron/config/rosbag_exclude/: nav.yaml  zed.yaml  zed_image.yaml  zed_space.yaml
gigatron/launch/: amcl_diff.launch  drive.launch  ekf_template.launch  gigatron_frame_gps_nav.launch  kilotron_drive.launch  laser_range_filter.launch  map_server.launch  mapping.launch  mapping_with_sensors.launch  odometry_rviz.launch  rp.launch  rviz.launch  save_training_data.launch  semiautomatic.launch  sensors.launch  trained_scan_callback.launch
gigatron/launch/localization/: README.md  amcl.launch  amcl_diff.launch
gigatron/launch/mapping/: gmapping.launch  hector_mapping.launch  save_map.launch
gigatron/maps/: README.md  avc.yaml  canny_hallway.yaml
gigatron/maps/canny_hallway_test_2016-08-13-12-38-26/: notes
gigatron/msg/: Drive.msg  DriveStamped.msg  ExtendedState.msg  State.msg
gigatron/notes/: Steering Fixes.ipynb  Steering Notes.ipynb
gigatron/rviz/: car.rviz  car_costmap.rviz  car_map.rviz  car_nav.rviz  car_nav_teb.rviz  kilotron.rviz  localization.rviz  nav.rviz  odometry.rviz  rtabmap.rviz
gigatron/scripts/: Steering Fixes.ipynb  Steering Notes.ipynb  bag  drive  drivehesitant  exclude_bag_nav  hare  launch_torch_callback  post_flashing_tk1_install.sh  post_flashing_tx1_install.sh  rosbag_exclude  rosbag_filter  save_training_data  steer  stop  trained_scan_callback.lua
gigatron/scripts/init/: post_flashing_tk1_install.sh  post_flashing_tx1_install.sh
gigatron/src/: SteeringPub.cpp  ThrottlePubOld.cpp  odom_tf_publisher.cpp  vector_pub.cpp
gigatron/urdf/: gigatron.urdf
gigatron_hardware/: CMakeLists.txt  package.xml
gigatron_hardware/config/: gigatron_base.yaml  gigatron_platform.yaml  kilotron_platform.yaml  koolaid_platform.yaml
gigatron_hardware/config/gigatron/: imu_calibration.ini
gigatron_hardware/config/gigatron/sensor_links/: imu_link.yaml  laser_link.yaml
gigatron_hardware/config/kilotron/: imu_calibration.ini
gigatron_hardware/config/kilotron/sensor_links/: imu_link.yaml  laser_link.yaml
gigatron_hardware/config/kilotron_sensors/: imu_link.yaml  laser_link.yaml
gigatron_hardware/config/sensors/: estop_filter_config.yaml  inverted_laser_angle_filter_config.yaml  laser_angle_filter_config.yaml  laser_range_filter_config.yaml
gigatron_hardware/config/udev/: 99-usb-serial-device.rules  README.md
gigatron_hardware/launch/: README.md  arduino.launch  arduino_control.launch  car.launch  estop.launch  gigatron.launch  gigatron_frame.launch  kilotron.launch  laser_angle_filter.launch  laser_filters.launch  laser_range_filter.launch  pointcloud_to_scan.launch  sensor_transform.launch  xacro.launch
gigatron_hardware/launch/sensors/: gps.launch  imu.launch  pixhawk_imu.launch  rplidar.launch  xv.launch  xvlidar.launch  zed.launch  zed_scan.launch
gigatron_hardware/meshes/: rplidar.stl
gigatron_hardware/msg/: Motors.msg  Radio.msg
gigatron_hardware/scripts/: drive_test_pub  init_udev_rules  wheel_distance_test.py
gigatron_hardware/src/: arduino_drive_controller.cpp  encoder_debug.cpp
gigatron_hardware/urdf/: common.urdf.xacro  frames.gv  gigatron.urdf.xacro  gigatron_frame.urdf.xacro  gigatron_testing.urdf.xacro  kilotron.urdf  kilotron.urdf.xacro
gigatron_hardware/urdf/sensors/: bno055_imu.urdf.xacro  bno055_imu.xacro  rplidar.urdf.xacro  xvlidar.urdf.xacro  zed.urdf.xacro
gigatron_msgs/: CMakeLists.txt  package.xml
gigatron_msgs/msg/: DriveStamped.msg  ExtendedState.msg  MotorCommand.msg  Radio.msg  State.msg
gigatron_nav/: CMakeLists.txt  README.md  package.xml
gigatron_nav/config/: costmap_common_params.yaml  global_costmap.yaml  global_costmap_params.yaml  local_costmap_params.yaml
gigatron_nav/config/gigatron/: base_local_planner.yaml  costmap_common_params.yaml  teb_local_planner.yaml
gigatron_nav/config/kilotron/: base_local_planner.yaml  costmap_common_params.yaml  teb_local_planner.yaml
gigatron_nav/launch/: avc.launch  goal_pub.launch  goal_test.launch  gps_nav.launch  move_base.launch  nav.launch  navsat_transform_node.launch
gigatron_nav/launch/localization/: amcl.launch  ekf_map.launch  ekf_odom.launch  localization.launch
gigatron_nav/launch/mapping/: gmapping.launch  rtabmap.launch  save_map.launch
gigatron_nav/maps/: avc.yaml  canny_loop.yaml  empty.yaml  loop_gmap.pgm  loop_gmap.yaml  street_rp.pgm  street_rp.yaml  street_xv.pgm  street_xv.yaml
gigatron_nav/maps/plans/: avc_race.yaml  avc_racetrack.yaml  indoor.yaml  template_plan.yaml  template_route.yaml
gigatron_nav/maps/routes/: template_route.yaml
gigatron_nav/scripts/: cmd_vel_to_drive  quat_to_rpy
gigatron_nav/src/: nav_goal_publisher.cpp
launch/: amcl_diff.launch  arduino_control.launch  laser_range_filter.launch  old_mapping.launch  turtle.launch
metatron/: CMakeLists.txt  package.xml
msg/: Angle.msg  ArduinoInput.msg  ArduinoOutput.msg  Motors.msg  Num.msg  RadioInput.msg  Steering.msg
scan_filters/: CMakeLists.txt  LICENSE.md  package.xml  scan_filters_plugins.xml
scan_filters/config/: inverted_laser_angle_filter_forward_180_degrees.yaml  laser_angle_filter.yaml  laser_angle_filter_forward_180_degrees.yaml  laser_angle_filter_koolaid.yaml  scan_sunlight_filter.yaml
scan_filters/include/scan_filters/: scan_angle_filter.h  scan_sunlight_filter.h
scan_filters/launch/: angle_filter.launch  filter.launch  sunlight_filter.launch
scan_filters/src/: scan_filters.cpp
scripts/: Steering Notes.ipynb  brokendrive  drive  gigaturtle  hare  steer  stop  switch
src/: ThrottlePub.cpp  control_pub_sub.cpp  odom_to_tf.cpp  teleop_key.cpp  vector_pub.cpp
