<?xml version="1.0"?>
<package>
  <name>gigatron</name>
  <version>0.0.0</version>
  <description>The gigatron package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="syler@mit.edu">Syler Wagner</maintainer>
  <maintainer email="spohorec@mit.edu">Sarah Pohorecky</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://gigatron.racing</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="syler@mit.edu">Syler Wagner</author>
  <author email="cjdesno@mit.edu">Chris Desnoyers</author>
  <author email="dgonz@mit.edu">Daniel Gonzalez</author>
  <author email="spohorec@mit.edu">Sarah Pohorecky</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
