<?xml version="1.0"?>
<package>
  <name>gigatron_nav</name>
  <version>0.0.0</version>
  <description>The gigatron_nav package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="syler@mit.edu">Syler Wagner</maintainer>
  <maintainer email="spohorec@mit.edu">Sarah Pohorecky</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://gigatron.racing</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="syler@mit.edu">Syler Wagner</author>
  <author email="spohorec@mit.edu">Sarah Pohorecky</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>costmap_2d</build_depend>
  <build_depend>gigatron_hardware</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend> 

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>gigatron_hardware</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rplidar_ros</run_depend>
  <!-- <run_depend>rtimulib_ros</run_depend> -->
  <run_depend>tf</run_depend>
  <run_depend>xv_11_laser_driver</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>