<?xml version="1.0"?>
<package>
  <name>metatron</name>
  <version>0.0.0</version>
  <description>The metatron metapackage</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="syler@mit.edu">Syler Wagner</maintainer>
  <maintainer email="cjdesno@mit.edu">Chris Desnoyers</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gigatron</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="syler@mit.edu">Syler Wagner</author>
  <author email="cjdesno@mit.edu">Chris Desnoyers</author>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>gigatron</run_depend>
  <run_depend>gigatron_hardware</run_depend>
  <run_depend>gigatron_nav</run_depend>
  <run_depend>scan_filters</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage /> <!-- This is so meta! -->
  </export>
</package>
